--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,4 +1,11 @@
 .dashboard {
     height: 100%;
     width: 100%;
+    text-align: center;
+    color: #EFEEA1; 
 }
+
+.movie_titles {
+    font-size: 2em;
+}
+
