--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,8 @@
 .App {
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
