--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,5 +1,8 @@
 .dashboard {
     box-sizing: border-box;
-    height: 100vh;
     width: 100%;
+    border: 3px solid rgb(155, 123, 123);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
