--- a/src/components/MovieFocus/MovieFocus.css
+++ b/src/components/MovieFocus/MovieFocus.css
@@ -1,24 +1,42 @@
 .focus {
   box-sizing: border-box;
-  background: yellow;
-  background-size: 100%;
-  min-height: 10em;
-  background-size: contain;
-  background-repeat: no-repeat;
+  position: relative;
+  height: 100%;
+  max-width: 60em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background: black;
+  color: white;
+  justify-self: center;
 }
 
 .focus>img {
-  width: 100%;
+  max-width: 100%;
+  height: auto;
 }
 
 .focus-header {
+  box-sizing: border-box;
+  margin: 0;
+  height: 7em;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  /* justify-content: space-between; */
+}
 
+.focus-header>h1 {
+  align-self: center;
+  padding-bottom: 10em;
 }
 
 .focus-footer {
-
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .focus-close {
-  position: absolute
+  align-self: flex-start;
 }
