--- a/src/components/MovieFocus/MovieFocus.css
+++ b/src/components/MovieFocus/MovieFocus.css
@@ -1,7 +1,5 @@
 .focus {
   box-sizing: border-box;
-  position: relative;
-  height: 100%;
   max-width: 60em;
   display: flex;
   flex-direction: column;
@@ -17,26 +15,21 @@
 }
 
 .focus-header {
-  box-sizing: border-box;
-  margin: 0;
-  height: 7em;
+  height: 6em;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
-  /* justify-content: space-between; */
 }
 
 .focus-header>h1 {
   align-self: center;
-  padding-bottom: 10em;
+}
+
+.focus-header>button {
+  align-self: flex-start;
 }
 
 .focus-footer {
   display: flex;
   align-items: center;
   justify-content: space-around;
-}
-
-.focus-close {
-  align-self: flex-start;
 }
