Add drop shadow to movieCards

--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -9,7 +9,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  
+  box-shadow: 20px 10px 10px black;
 }
 
 .poster {
