Restyle carousol buttons

--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -6,7 +6,7 @@
 }
 
 .filter select {
-  background-color: #D35403;
+  background-color: #F0B323;
   color: #fff;
   font-size: inherit;
   padding: .5em;
