--- a/src/components/CarouselButton/CarouselButton.css
+++ b/src/components/CarouselButton/CarouselButton.css
@@ -1,3 +1,39 @@
 .carousel_button {
     background-color: #522B3A;
+    margin: 0 10px;
 }
+
+.arrow {
+  position: absolute;
+  top: 50%;
+  width: 2rem;
+  height: 2rem;
+  background: transparent;
+  border-top: .4rem solid black;
+  border-right: .4rem solid black;
+  box-shadow: 0 0 0 lightgray;
+  -webkit-transition: all 200ms ease;
+  transition: all 200ms ease;
+}
+.arrow.left {
+  left: 0;
+  -webkit-transform: translate3d(0, -50%, 0) rotate(-135deg);
+          transform: translate3d(0, -50%, 0) rotate(-135deg);
+}
+.arrow.right {
+  right: 0;
+  -webkit-transform: translate3d(0, -50%, 0) rotate(45deg);
+          transform: translate3d(0, -50%, 0) rotate(45deg);
+}
+.arrow:hover {
+  border-top: .4rem solid orange;
+  border-right: .4rem solid orange;
+  box-shadow: .2rem -.2rem 0 black;
+}
+.arrow:hover.left {
+  left: -.2rem;
+}
+.arrow:hover.right {
+  right: -.2rem;
+}
+
