--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,24 +1,43 @@
 .header {
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    height: 7em;
-    background-color: black;
+    height: 8em;
+    background-color: #89AE92;
     margin-bottom: 50px;
-    color: #F0B323;
+    color: white;
     width: 100%;
 }
 
+.header>h1 {
+    transform: 
+}
+
 form {
-    margin: 20px 0 20px 20px;
+    width: 13em;
+    height: 4em;
+    /* position: absolute;
+    left: 0; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: .3em;
+    margin-left: 7em;
+}
+
+form>* {
+    /* backgroun */
+    height: 2em;
+    width: 100%;
+    border: none;
+    box-shadow:  5px 5px 10px #7b9d83,
+             -5px -5px 10px #97bfa1;
+    border-radius: 2px;
 }
 
 .logo {
-    width: 200px;
-    height: 75%;
-    margin: 10px 10px 10px 0;
-}
-
-.movie_titles {
-    font-size: 2em;
-    color: #F0B323;
+    height: 100%;
+    border-radius: 5px;
+    margin-right: 9em;
 }
