--- a/src/components/CarouselButton/CarouselButton.css
+++ b/src/components/CarouselButton/CarouselButton.css
@@ -1,23 +1,36 @@
-.carousel_button {
+.carousel-button {
     width: 3em;
     height: 3em;
     border: none;
     background: transparent;
     border-top: .4rem solid black;
     border-right: .4rem solid black;
-    transition: all .2s ease-out
+    transition: all .2s ease-out;
+    position: absolute;
+    margin: 0;
 }
 
 .arrow-left {
-  transform: rotate(225deg);
+  /* left: 4; */
+  transform: translateX(.8em) rotate(225deg);
 }
 .arrow-right {
-  transform: rotate(45deg)
+  transform: translateX(-.8em) rotate(45deg)
 }
-.carousel_button:hover {
-  border-top: .4rem solid #F0B323   ;
-  border-right: .4rem solid #F0B323;
+.carousel-button:hover {
+  border-top: .4rem solid #95ad95;
+  border-right: .4rem solid #95ad95;
   box-shadow: .2rem -.2rem 0 black;
 }
 
+.carousel-button-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 5em;
+  height: 8em;
+  background: #f1f1f1;
+  border-radius: 2px;
+  box-shadow: 0px 0px 6px grey;
+}
 
