--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   background-color: white;
   margin: 0;
   font-family: 'Fascinate', cursive;
-  background: rgba(17, 17, 17, 0.900);
+  background: rgb(219, 219, 219); 
 }
 
 
