--- a/src/components/MovieCarousel/MovieCarousel.css
+++ b/src/components/MovieCarousel/MovieCarousel.css
@@ -1,6 +1,6 @@
 .carousel{
     box-sizing: border-box;
-    margin: 0;
+    margin: 5em 0 0 0;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
