--- a/src/components/MovieFocus/MovieFocus.css
+++ b/src/components/MovieFocus/MovieFocus.css
@@ -28,6 +28,10 @@
   align-self: flex-start;
 }
 
+.focus-header>button:hover {
+  cursor: pointer;
+}
+
 .focus-footer {
   display: flex;
   align-items: center;
