--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -13,6 +13,7 @@
   align-items: center;
   box-shadow: 2px 3px 6px black; 
   color: white;
+  border-radius: 8px;
 }
 
 .card:hover {
@@ -26,6 +27,8 @@
   width: 100%;
   text-align: center;
   padding: 2em 0;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
   transition: opacity .2s ease-in
 }
 
@@ -35,6 +38,8 @@
   background-color: rgba(0, 0, 0, 0.83);
   display: flex;
   justify-content: space-around;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
   transition: opacity .2s ease-in
 }
 
