Change font family for movie focus to be more readable

--- a/src/components/MovieFocus/MovieFocus.css
+++ b/src/components/MovieFocus/MovieFocus.css
@@ -1,4 +1,5 @@
 .focus {
+  font-family: 'Limelight';
   box-sizing: border-box;
   max-width: 70em;
   display: flex;
@@ -13,6 +14,7 @@
 
 .header_title {
   padding-bottom: 1em 0;
+
 }
 
 .focus>img {
