Add router functionality to dashboard

--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -2,7 +2,7 @@
   width: 100%;
   min-width: 13em;
   height: 30em;
-  margin: 0 1em;
+  margin: 0 .5em;
   background-size: cover;
   background-attachment: initial;
   background-repeat: no-repeat;
