--- a/src/components/CarouselButton/CarouselButton.css
+++ b/src/components/CarouselButton/CarouselButton.css
@@ -1,26 +1,26 @@
 .carousel-button {
-    width: 3em;
-    height: 3em;
-    border: none;
-    background: transparent;
-    border-top: .4rem solid black;
-    border-right: .4rem solid black;
-    transition: all .2s ease-out;
-    position: absolute;
-    margin: 0;
+  width: 3em;
+  height: 3em;
+  border: none;
+  background: transparent;
+  border-top: 0.4rem solid black;
+  border-right: 0.4rem solid black;
+  transition: all 0.2s ease-out;
+  position: absolute;
+  margin: 0;
 }
 
 .arrow-left {
-  transform: translateX(.8em) rotate(225deg);
+  transform: translateX(0.8em) rotate(225deg);
 }
 
 .arrow-right {
-  transform: translateX(-.8em) rotate(45deg)
+  transform: translateX(-0.8em) rotate(45deg);
 }
 .carousel-button:hover {
-  border-top: .4rem solid #95ad95;
-  border-right: .4rem solid #95ad95;
-  box-shadow: .2rem -.2rem 0 black;
+  border-top: 0.4rem solid #95ad95;
+  border-right: 0.4rem solid #95ad95;
+  box-shadow: 0.2rem -0.2rem 0 black;
   cursor: pointer;
 }
 
@@ -34,4 +34,3 @@
   border-radius: 2px;
   box-shadow: 0px 0px 6px grey;
 }
-
