--- a/src/components/Hamburger/Hamburger.css
+++ b/src/components/Hamburger/Hamburger.css
@@ -1,10 +1,17 @@
 /* Position and sizing of burger button */
+/* background: #89ae92f5; */
+/* width: 36px;
+height: 30px;
+left: 20px;
+top: 33px; */
+
+/* Position and sizing of burger button */
 .bm-burger-button {
   position: fixed;
   width: 36px;
   height: 30px;
-  left: 36px;
-  top: 36px;
+  left: 20px;
+  top: 33px;
 }
 
 /* Color/shape of burger icon bars */
@@ -34,12 +41,14 @@ Note: Beware of modifying this element as it can break the animations - you shou
 */
 .bm-menu-wrap {
   position: fixed;
-  height: 100%;
+  left: 0 !important;
+  height: 20% !important;
+  width: 100% !important;
 }
 
 /* General sidebar styles */
 .bm-menu {
-  background: #89ae92f5;
+  background: #89ae92;
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
 }
@@ -51,18 +60,38 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 /* Wrapper for item list */
 .bm-item-list {
+  color: #b8b7ad;
   display: flex;
   flex-direction: column;
-  /* color: #b8b7ad; */
-  /* padding: 0.8em; */
+  justify-content: center;
+  align-items: center;
+}
+
+.bm-item-list > div {
+  border: none;
+  box-shadow: 5px 5px 10px #7b9d83, -5px -5px 10px #97bfa1;
+  border-radius: 2px;
 }
 
 /* Individual item */
-.bm-item {
-  display: inline-block;
+.bm-item-list > div > * {
+  width: 100%;
+  height: 2em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  /* margin-top: 0.3em; */
+  /* margin-left: 7em; */
+  /* margin-bottom: .1em; */
+}
+
+.bm-item-list > div > input {
+  margin-bottom: 0.8em;
 }
 
 /* Styling of overlay */
 .bm-overlay {
-  background: rgba(0, 0, 0, 0.3);
+  left: 0 !important;
+  background: none !important;
 }
