--- a/src/components/MovieCarousel/MovieCarousel.css
+++ b/src/components/MovieCarousel/MovieCarousel.css
@@ -14,3 +14,9 @@
     width: 70%;
     font-size: 3em;
 }
+
+@media only screen and (max-width: 625px) {
+    .search-error {
+        padding-top: 2em;
+    }
+}
