--- a/src/components/Hamburger/Hamburger.css
+++ b/src/components/Hamburger/Hamburger.css
@@ -1,11 +1,4 @@
 /* Position and sizing of burger button */
-/* background: #89ae92f5; */
-/* width: 36px;
-height: 30px;
-left: 20px;
-top: 33px; */
-
-/* Position and sizing of burger button */
 .bm-burger-button {
   position: fixed;
   width: 36px;
@@ -53,14 +46,8 @@ Note: Beware of modifying this element as it can break the animations - you shou
   font-size: 1.15em;
 }
 
-/* Morph shape necessary with bubble or elastic */
-.bm-morph-shape {
-  fill: #373a47;
-}
-
 /* Wrapper for item list */
 .bm-item-list {
-  color: #b8b7ad;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -92,5 +79,5 @@ Note: Beware of modifying this element as it can break the animations - you shou
 /* Styling of overlay */
 .bm-overlay {
   left: 0 !important;
-  background: rgba(0, 0, 0, 0.1)!important;
+  background: none !important;
 }
