--- a/src/components/MovieCarousel/MovieCarousel.css
+++ b/src/components/MovieCarousel/MovieCarousel.css
@@ -7,10 +7,29 @@
     align-items: center;
     width: 94%;
     height: 100%;
+    overflow-x: unset;
 }
 
 .search-error {
     color: black;
     width: 70%;
     font-size: 3em;
+}
+.slideIn-enter {
+  opacity: 0.01;
+  z-index: 1;
+}
+
+.slideIn-enter.slideIn-enter-active {
+  opacity: 1;
+  transition: opacity 100ms linear;
+}
+
+.slideIn-leave {
+  opacity: 1;
+}
+
+.slideIn-leave.slideIn-leave-active {
+  opacity: 0.01;
+  transition: opacity 400ms linear;
 }
