--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -15,7 +15,7 @@
   box-shadow: 2px 3px 6px black;
   color: white;
   border-radius: 8px;
-  position: relative;
+  /* position: relative; */
 }
 
 .card:hover {
