--- a/src/components/MovieCarousel/MovieCarousel.css
+++ b/src/components/MovieCarousel/MovieCarousel.css
@@ -1,40 +1,15 @@
-<<<<<<< HEAD
-.carousel {
-  box-sizing: border-box;
-  margin: 5em 0 0 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  width: 94%;
-  height: 100%;
-}
-
-.search-error {
-  color: black;
-  width: 70%;
-  font-size: 3em;
-}
-
-@media only screen and (max-width: 625px) {
-  .search-error {
-    padding-top: 2em;
-  }
-  .carousel {
-    padding-top: 2em;
-  }
-}
-=======
 .carousel{
     box-sizing: border-box;
-    margin: 5em 0 0 0;
+    /* margin: 3em 0 0 0; */
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
     width: 94%;
     height: 100%;
-    overflow-x: unset;
+    overflow-x: hidden;
+    padding: 1em 0;
+    /* position: absolute */
 }
 
 .search-error {
@@ -42,22 +17,29 @@
     width: 70%;
     font-size: 3em;
 }
+
 .slideIn-enter {
-  opacity: 0.01;
-  z-index: 1;
+  opacity: .5;
 }
 
 .slideIn-enter.slideIn-enter-active {
   opacity: 1;
-  transition: opacity 100ms linear;
+  transition: opacity 300ms ease-in;
 }
 
 .slideIn-leave {
-  opacity: 1;
+  visibility: hidden;
+  opacity: 0;
 }
 
 .slideIn-leave.slideIn-leave-active {
-  opacity: 0.01;
-  transition: opacity 400ms linear;
+  opacity: .5;
+  display: none;
+  transition: opacity .1ms linear;
 }
->>>>>>> 9c4da17492ebd4555f52d5c7eabf33b81d60fa82
+
+@media only screen and (max-width: 625px) {
+  .carousel {
+    margin-top: 2em;
+  }
+}
