--- a/src/components/MovieCarousel/MovieCarousel.css
+++ b/src/components/MovieCarousel/MovieCarousel.css
@@ -7,7 +7,7 @@
     align-items: center;
     width: 94%;
     height: 100%;
-    overflow-x: unset;
+    overflow: hidden;
 }
 
 .search-error {
@@ -16,20 +16,21 @@
     font-size: 3em;
 }
 .slideIn-enter {
-  opacity: 0.01;
-  z-index: 1;
+    opacity: 0;
+  transform: translate(0, 0);
 }
 
 .slideIn-enter.slideIn-enter-active {
+  transform: translate(40em,0);
   opacity: 1;
-  transition: opacity 100ms linear;
+  transition: all 1500ms ease-in-out;
 }
 
 .slideIn-leave {
-  opacity: 1;
+  transform: translate(-35em, 0);
 }
 
 .slideIn-leave.slideIn-leave-active {
-  opacity: 0.01;
-  transition: opacity 400ms linear;
+  transform: translateX(40em);
+  transition: all 1250ms ease-in-out;
 }
