--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -1,9 +1,9 @@
 .card {
   width: 100%;
   min-width: 13em;
-  max-width: 17em;
+  max-width: 13em;
   height: 30em;
-  margin: 0 .5em;
+  margin: 0 1em;
   background-size: cover;
   background-attachment: initial;
   background-repeat: no-repeat;
@@ -15,6 +15,7 @@
   box-shadow: 2px 3px 6px black; 
   color: white;
   border-radius: 8px;
+  position:inherit;
 }
 
 .card:hover {
