--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -1,7 +1,7 @@
 .card {
   width: 100%;
-  min-width: 13em;
-  max-width: 13em;
+  min-width: 14vw;
+  max-width: 14vw;
   height: 30em;
   margin: 0 1em;
   background-size: cover;
