--- a/src/components/MovieFocus/MovieFocus.css
+++ b/src/components/MovieFocus/MovieFocus.css
@@ -14,10 +14,9 @@
 
 .header_title {
   padding-bottom: 1em 0;
-
 }
 
-.focus>img {
+.focus > img {
   max-width: 100%;
   height: auto;
 }
@@ -29,20 +28,31 @@
   padding-bottom: 2em;
 }
 
-.focus-header>h1 {
+.focus-header > h1 {
   align-self: center;
 }
 
-.focus-header>button {
+.focus-header > .link {
+  width: 1em;
+  height: 1em;
   display: flex;
   justify-content: center;
   align-items: center;
   align-self: flex-start;
   margin: 1em 0 0 1em;
+  background: #DBDBDB;
+  color: black;
+  text-decoration: none;
+  padding: .1em;
+  text-align: center;
+  border-radius: 2px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1em;
 }
 
-.focus-header>button:hover {
+.focus-header > .link:hover {
   cursor: pointer;
+  background: lightslategrey
 }
 
 .overview {
@@ -57,5 +67,5 @@
 }
 
 .top_line {
-  border-top: .1em solid white;
+  border-top: 0.1em solid white;
 }
